# Archinstall

./: main.py  pyproject.toml
archinstall/lib/: command.py  disk.py
tests/: test_archinstall.py
