[tool.poetry]
name = "Archinstall"
version = "0.1.0"
description = ""
authors = ["medicendav <davidtorrezreyes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypi = "^0.0.3"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
